--- a/my.md.html
+++ b/my.md.html
@@ -16,19 +16,20 @@ Keymap
 | vim     | LCtrl/Space + 7   | Ctrl + Right       | vim tab next                |
 | vim     | Space + i         | Ctrl + Up          | vim tab new                 |
 | vim     | Space + o         | Ctrl + Down        | vim tab del                 |
-| vim     | Space + n         | Alt + n            |                             |
-| vim     | Space + p         | Alt + p            |                             |
-| app/fzf | Space + h         | PgUp / Alt + h     | page up                     |
-| app/fzf | Space + j         | Down / Alt + j     | down                        |
-| app/fzf | Space + k         | Up   / Alt + k     | up                          |
-| app/fzf | Space + l         | PgDn / Alt + l     | page down                   |
+| fzf     | Space + n         | Alt + n            |                             |
+| fzf     | Space + p         | Alt + p            |                             |
+| fzf     | Space + t         | Alt + t            | toggle preview              |
+| app/fzf | Space + h         | PgUp               | page up                     |
+| app/fzf | Space + j         | Down               | down                        |
+| app/fzf | Space + k         | Up                 | up                          |
+| app/fzf | Space + l         | PgDn               | page down                   |
 | app     | Space + a         | Home               |                             |
 | app     | Space + e         | End                |                             |
 | app     | Space + b         | Left               |                             |
 | app     | Space + f         | Right              |                             |
 | app     | Space + s         | BS                 |                             |
 | app     | Space + d         | Del                |                             |
-| app     | Space + g         | F5                 |                             |
+| app     | Space + g         | F5                 | redraw                      |
 | wt      | Space + c         | Ctrl + Shift + c   | copy                        |
 | wt      | Space + v         | Ctrl + Shift + v   | paste                       |
 | win     | RCtrl + 7         | Win + Left         | maximize left               |
@@ -42,10 +43,7 @@ Keymap
 | wt      | RCtrl + v         | Ctrl + Shift + v   | paste                       |
 | ahk     | RCtrl + r         |                    | reload ahk                  |
 | win     | Zen               | Alt + `            | 日本語入力 [英語キーボード] |
-| win     |                   | Alt + Tab          | App切り替え                 |
-| win     |                   | Alt + Shift + Tab  | App切り替え（逆順）         |
 | wt      |                   | Ctrl + [0-=]       | font scale [reset, -, +]    |
-| vim     |                   | Ins, Del           | tab [new, del]              |
 | vim     |                   | F1, F2, F10        | goto win [1, 2, $]          |
 | vim     |                   | Ctrl + [hjkl]      | goto win                    |
 | bash    |                   | t, tx              | toggle win size             |
