--- a/my.md.html
+++ b/my.md.html
@@ -61,6 +61,42 @@ Keymap
 | bash    |                   | ,,                 | pushd                       |
 | bash    |                   | ,-                 | popd                        |
 
+## Move
+
+|                       | Key     | Normal | Terminal | Fzf               | App              |
+| ---                   | ---     | ---    | ---      | ---               | ---              |
+| app next              | A-Tab   |        |          |                   | C-Esc, Space-Esc |
+| app prev              | S-A-Tab |        |          |                   | C-1  , Space-1   |
+| app tab prev          | S-C-Tab |        |          |                   | C-4  , Space-4   |
+| app tab next          | C-Tab   |        |          |                   | C-5  , Space-5   |
+| vim tab prev          | C-Left  |        |          |                   | C-6  , Space-6   |
+| vim tab next          | C-Right |        |          |                   | C-7  , Space-7   |
+| vim win left          |         | C-h    |          |                   |                  |
+| vim win down          |         | C-j    |          |                   |                  |
+| vim win up            |         | C-k    |          |                   |                  |
+| vim win right         |         | C-l    |          |                   |                  |
+| cursor left           | Left    | h      |          |                   | Space-h          |
+| cursor down           | Down    | j      |          |                   | Space-j          |
+| cursor up             | Up      | k      |          |                   | Space-k          |
+| cursor right          | Right   | l      |          |                   | Space-l          |
+| page down             | PgDn    | C-f    |          |                   | Space-n          |
+| page up               | PgUp    | C-d    |          |                   | Space-p          |
+| scroll down           |         | C-n    |          |                   |                  |
+| scroll up             |         | C-p    |          |                   |                  |
+| readline Home         | Home    |        | C-a      | C-a               | Space-a          |
+| readline End          | End     |        | C-e      | C-e               | Space-e          |
+| readline Left         | Left    |        | C-b      | C-b               | Space-b          |
+| readline Right        | Right   |        | C-f      | C-f               | Space-f          |
+| readline BS           | BS      |        | C-s      | C-s               | Space-s          |
+| readline Del          | Del     |        | C-d      | C-d               | Space-d          |
+| redraw                | F5      | C-g    | C-g      | C-g               | Space-g          |
+| fzf preview-page-up   | Left    |        |          | Space-h           |                  |
+| fzf preview-down      | Down    |        |          | Space-j           |                  |
+| fzf preview-up        | Up      |        |          | Space-k           |                  |
+| fzf preview-page-down | Right   |        |          | Space-l           |                  |
+| fzf down              | PgDn    |        |          | Space-n, C-j, C-n |                  |
+| fzf up                | PgUp    |        |          | Space-p, C-k, C-p |                  |
+
 ## HHKB 60 Keys
 
 *****************************************************************
