--- a/vim.md.html
+++ b/vim.md.html
@@ -14,7 +14,7 @@ vim
 | C-A        | add                      | M |   | quickhl                            |   |   |   | readline begin        |                   |
 | C-B        | one page scroll up       | M |   |                                    |   |   |   | readline back         |                   |
 | C-C        | term interrupt           | M |   |                                    |   |   |   | term interrupt        |                   |
-| C-D        | half page scroll down    | M | N | one page scroll up                 |   |   |   | EOF                   |                   |
+| C-D        | half page scroll down    | M | N | one page scroll up                 |   |   |   | Del/EOF               |                   |
 | C-E        | one line scroll down     | M |   | close the current win              |   |   |   | readline end          |                   |
 | C-F        | one page scroll down     |   | N | one page scroll down               |   |   |   | readline front        |                   |
 | C-G        | display info             | M |   | win redraw                         | = | M |   | win redraw            |                   |
@@ -29,7 +29,7 @@ vim
 | C-P        | k                        | M | N | one line scroll up                 |   |   |   | readline history prev |                   |
 | C-Q        | term start input         | M | N | exec the command in the register q |   |   |   |                       | term start input  |
 | C-R        | redo                     |   |   | redo                               |   |   |   |                       |                   |
-| C-S        | term stop input          | M |   |                                    |   |   |   |                       | term stop input   |
+| C-S        | term stop input          | M |   |                                    |   |   |   | BS                    | term stop input   |
 | C-T        | prev in tag list         |   |   | prev in tag list                   |   |   |   |                       |                   |
 | C-U        | half page scroll up      | M |   | open wbl                           |   |   |   | readline remove line  |                   |
 | C-V        | block visual mode        |   |   | block visual mode                  |   | M |   | paste                 |                   |
