--- a/my.md.html
+++ b/my.md.html
@@ -65,12 +65,14 @@ Keymap
 
 |                       | Key     | Normal | Terminal | Fzf               | App              |
 | ---                   | ---     | ---    | ---      | ---               | ---              |
-| app next              | A-Tab   |        |          |                   | C-Esc, Space-Esc |
-| app prev              | S-A-Tab |        |          |                   | C-1  , Space-1   |
-| app tab prev          | S-C-Tab |        |          |                   | C-4  , Space-4   |
-| app tab next          | C-Tab   |        |          |                   | C-5  , Space-5   |
-| vim tab prev          | C-Left  |        |          |                   | C-6  , Space-6   |
-| vim tab next          | C-Right |        |          |                   | C-7  , Space-7   |
+| app next              | A-Tab   |        |          |                   | Space-Esc, C-Esc |
+| app prev              | A-S-Tab |        |          |                   | Space-1  , C-1   |
+| app tab prev          | C-S-Tab |        |          |                   | Space-4  , C-4   |
+| app tab next          | C-Tab   |        |          |                   | Space-5  , C-5   |
+| vim tab prev          | C-Left  |        |          |                   | Space-6  , C-6   |
+| vim tab next          | C-Right |        |          |                   | Space-7  , C-7   |
+| vim tab new           | C-Up    |        |          |                   | Space-i          |
+| vim tab del           | C-Down  |        |          |                   | Space-o          |
 | vim win left          |         | C-h    |          |                   |                  |
 | vim win down          |         | C-j    |          |                   |                  |
 | vim win up            |         | C-k    |          |                   |                  |
