--- a/my.md.html
+++ b/my.md.html
@@ -147,6 +147,56 @@ Keymap
   1. Pn
 1. End: Fn + RCtrl
 
+## 40 Keys
+
+***********************************************************************
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+*
+* +---+---+---+---+---+   +---+---+---+---+---+
+* | + | 7 | 8 | 9 | / |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* | - | 4 | 5 | 6 | * |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* | 0 | 1 | 2 | 3 | = |   | n |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+*
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   | ( | ) | ~ |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   | [ | ] |`|`|
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   | b |   |   |   | { | } | \ |
+* +---+---+---+---+---+   +---+---+---+---+---+
+*
+***********************************************************************
+
+## 24 special keys
+~~~
+'"[]{}
+-_=+\|`~
+!@#$%^&*()
+~~~
+
+
+~~~
+-+*=
+()[]{}
+\|~
+
+!@
+_
+#
+^$
+%&
+`'"
+~~~
+
 Vim next/prev
 =======================================================
 | Mode         | Key | Description  |
