--- a/my.md.html
+++ b/my.md.html
@@ -161,7 +161,7 @@ Keymap
 * +---+---+---+---+---+   +---+---+---+---+---+
 * |   | 7 | 8 | 9 | 0 |   | + | / | ( | ) |   |
 * +---+---+---+---+---+   +---+---+---+---+---+
-* |   | 4 | 5 | 6 |   |   | - | * |   |   |   |
+* |   | 4 | 5 | 6 |   |   | - | * | { | } |   |
 * +---+---+---+---+---+   +---+---+---+---+---+
 * |[z]| 1 | 2 | 3 |   |   | = |   | , | . |   |
 * +---+---+---+---+---+   +---+---+---+---+---+
@@ -169,12 +169,69 @@ Keymap
 * +---+---+---+---+---+   +---+---+---+---+---+
 * |   |   |   |   |   |   |   |   | ( | ) | ~ |
 * +---+---+---+---+---+   +---+---+---+---+---+
-* |   |   |   |   |   |   |   |   | [ | ] |`|`|
+* |[a]|   |   |   |   |   |   |   | { | } |`|`|
 * +---+---+---+---+---+   +---+---+---+---+---+
-* |   |   |   |   |[b]|   |   |   | { | } | \ |
+* |   |   |   |   |   |   |   |   | [ | ] | \ |
+* +---+---+---+---+---+   +---+---+---+---+---+
+*
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |[;]|
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+*
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |   |
+* +---+---+---+---+---+   +---+---+---+---+---+
+* |   |   |   |   |   |   |   |   |   |   |[/]|
 * +---+---+---+---+---+   +---+---+---+---+---+
 *
 ***********************************************************************
+
+<textarea id="typing_area" name="typing_area" rows="10" cols="80">
+This is a typing area.
+</textarea>
+
+- readline, text area
+  - line edit: Home, End, BS, Del, Left, Right, Up, Down
+- fzf
+  - select: up, down
+  - preview view: PgUp, PgDn, half PgUp, half PgDn
+- vim
+  - view: PgUp, PgDn, half PgUp, half PgDn
+  - win: next, prev, Left, Right
+  - tab: next, prev
+- app
+  - tab: next, prev
+- win
+  - app: next, prev
+
+Home
+End
+PgUp
+PgDn
+
+Left
+Right
+Up
+Down
+
+Tab
+Esc
+
+Ctrl
+Shift
+Alt
+
+Space
+Enter
+Ins
+Del
+BS
 
 ## 24 special keys
 ~~~
